@@ -11,8 +11,10 @@ apport (0.62) UNRELEASED; urgency=low
     get_architecture(package) on multiarch platforms such as amd64.
   * backends/packaging-dpkg.py: Implement get_system_architecture() to return
     dpkg --print-architecture, add a shallo test case.
+  * apport/report.py, add_package_info(): Rename key 'Architecture:' to
+    'PackageArchitecture:' for clarity.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Feb 2007 10:36:46 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Feb 2007 10:50:02 +0100
 
 apport (0.61) feisty; urgency=low
 
